# Axiom

./: .clang-format  .clangd  CMakeLists.txt
src/: core.hpp  main.cpp  ndarray.hpp
src/ndarray/: broadcast.hpp  concepts.hpp  core.hpp  extents.hpp  iterator.hpp  math.hpp  print.hpp  random.hpp  utils.hpp
src/numerics/: operands.hpp  primes.hpp
src/ranges/: numeric.hpp
